# bazel-playground-connectrpc

./: BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
cmd/server/: BUILD.bazel  main.go
cmd/testsimplecmd/: BUILD.bazel  main.go
proto/testproto/: BUILD.bazel  msg.proto  msg2.proto  testserver.proto
