load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "testproto_proto",
    srcs = [
        "msg.proto",
        "msg2.proto",
        "testserver.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "testproto_go_proto",
    compilers = [
        "@rules_go//proto:go_proto",
        "//:connect_go_proto_compiler",
    ],
    # compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/jimmyl02/bazel-playground-connectrpc/proto/testproto",
    proto = ":testproto_proto",
    visibility = ["//visibility:public"],
)
